# src/routes.ts
@@ -1,24 +1,31 @@
-import { Router } from 'express';
-import swaggerUi from 'swagger-ui-express';
-import apiSpec from '../openapi.json';
-
-import * as BookController from './controllers/book';
+import {
+  create,
+  deleteVideogameById,
+  findAll,
+  findById,
+  uptade,
+} from "controllers/videogame.controller";
+import { Router } from "express";
+import swaggerUi from "swagger-ui-express";
+import apiSpec from "../openapi.json";
 
 const swaggerUiOptions = {
-  customCss: '.swagger-ui .topbar { display: none }'
+  customCss: ".swagger-ui .topbar { display: none }",
 };
 
 const router = Router();
 
 // Book routes
-router.post('/book/add', BookController.add);
-router.get('/book/all', BookController.all);
-router.get('/book/search', BookController.search);
+router.post("/videogame/add", create);
+router.get("/videogame/", findAll);
+router.get("/videogame/:id", findById);
+router.put("/videogame/:id", uptade);
+router.delete("/videogame/:id", deleteVideogameById);
 
 // Dev routes
-if (process.env.NODE_ENV === 'development') {
-  router.use('/dev/api-docs', swaggerUi.serve);
-  router.get('/dev/api-docs', swaggerUi.setup(apiSpec, swaggerUiOptions));
+if (process.env.NODE_ENV === "development") {
+  router.use("/dev/api-docs", swaggerUi.serve);
+  router.get("/dev/api-docs", swaggerUi.setup(apiSpec, swaggerUiOptions));
 }
 
 export default router;
